--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,10 +26,7 @@ jobs:
         env:
           GO111MODULE: on
         run: |
-          go get -v -t -d ./...
-
-      - name: Test
-        run: go test -v ./...
+          go mod download
 
       - name: Build as binary
         env:
