fix archive path

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,8 @@ jobs:
 
       - name: Achive to zip
         run: |
-          tar -zcf dist/google-tts-screenreader.tar.gz ./dist/google-tts-screenreader
+          cd dist
+          tar -zcf google-tts-screenreader.tar.gz google-tts-screenreader
 
       - name: Release
         uses: softprops/action-gh-release@v1
